Refactored the ver2 codes, but haven't tried it yet

--- a/notebooks/train_hybridsn_sgmt_ver2.ipynb
+++ b/notebooks/train_hybridsn_sgmt_ver2.ipynb
@@ -147,11 +147,13 @@
     "    Dataset hemat memori berbasis file .npy hasil konversi.\n",
     "    Membaca tile langsung dari disk menggunakan mmap_mode=\"r\".\n",
     "    \"\"\"\n",
-    "    def __init__(self, data_files, label_map, tile_size=128, normalize=True):\n",
+    "    def __init__(self, data_files, label_map, tile_size=128, normalize=True, label_remap=None):\n",
     "        self.data_files = data_files\n",
     "        self.label_map = label_map\n",
     "        self.tile_size = tile_size\n",
     "        self.normalize = normalize\n",
+    "        # label_remap: dict {orig_label: new_index}, if None -> identity mapping\n",
+    "        self.label_remap = label_remap\n",
     "\n",
     "        # Daftar pasangan (file_x, file_y)\n",
     "        self.pairs = []\n",
@@ -184,18 +186,41 @@
     "        x = np.load(fx, mmap_mode=\"r\")[i:i+self.tile_size, j:j+self.tile_size, :]\n",
     "        y = np.load(fy, mmap_mode=\"r\")[i:i+self.tile_size, j:j+self.tile_size]\n",
     "\n",
-    "        # Abaikan tile kosong (semua 0)\n",
-    "        if not np.any(y > 0):\n",
-    "            # Jika tile kosong, ambil tile lain secara acak agar batch tetap penuh\n",
-    "            return self.__getitem__(np.random.randint(0, len(self.index)))\n",
+    "        # Abaikan tile kosong (semua 0) dengan fail-safe agar tidak infinite recursion\n",
+    "        # kalau tetap kosong setelah 3 percobaan → biarkan saja y tetap kosong (model akan skip naturally karena weight=0 utk bg)\n",
+    "        for _ in range(3):  # coba maksimal 3 kali\n",
+    "            if np.any(y > 0):\n",
+    "                break\n",
+    "            file_idx, i, j = self.index[np.random.randint(0, len(self.index))]\n",
+    "            fx, fy = self.pairs[file_idx]\n",
+    "            x = np.load(fx, mmap_mode=\"r\")[i:i+self.tile_size, j:j+self.tile_size, :]\n",
+    "            y = np.load(fy, mmap_mode=\"r\")[i:i+self.tile_size, j:j+self.tile_size]\n",
+    "\n",
     "\n",
     "        if self.normalize:\n",
     "            x = normalize_reflectance(x)\n",
+    "\n",
+    "        # REMAP label bila mapping diberikan\n",
+    "        if self.label_remap is not None:\n",
+    "            # buat array output dengan nilai default 0 (background) atau -1 jika ingin ignore\n",
+    "            y_remap = np.zeros_like(y, dtype=np.int64)\n",
+    "            # set default to 0 (background) then map others\n",
+    "            for orig_label, new_idx in self.label_remap.items():\n",
+    "                # gunakan boolean mask assignment (efisien)\n",
+    "                if orig_label == 0:\n",
+    "                    # background -> keep 0 (or explicitly assign)\n",
+    "                    y_remap[y == orig_label] = new_idx\n",
+    "                else:\n",
+    "                    y_remap[y == orig_label] = new_idx\n",
+    "            y = y_remap\n",
+    "        else:\n",
+    "            y = y.astype(np.int64)\n",
     "\n",
     "        # Konversi ke tensor\n",
     "        x_tensor = torch.tensor(x.transpose(2, 0, 1), dtype=torch.float32)\n",
     "        y_tensor = torch.tensor(y, dtype=torch.long)\n",
     "        return x_tensor, y_tensor\n",
+    "\n",
     "\n",
     "def detect_actual_classes(pairs):\n",
     "    \"\"\"Scan semua file y.npy untuk mendeteksi kelas yang benar-benar ada\"\"\"\n",
@@ -272,18 +297,52 @@
     "\n",
     "# DETEKSI kelas aktual yang benar-benar muncul (bukan ambil dari JSON)\n",
     "actual_classes = detect_actual_classes(train_pairs + val_pairs + test_pairs)\n",
-    "num_classes_actual = len(actual_classes)\n",
-    "print(f\"\\nnum_classes SEMENTARA = {num_classes_actual} (nanti kita pakai ini untuk model)\")\n",
     "\n",
-    "# Buat dataset per split\n",
-    "train_dataset = SeaweedDataset([p[0] for p in train_pairs], label_map, tile_size=128)\n",
-    "val_dataset   = SeaweedDataset([p[0] for p in val_pairs], label_map, tile_size=128)\n",
-    "test_dataset  = SeaweedDataset([p[0] for p in test_pairs], label_map, tile_size=128, normalize=False)\n",
+    "# actual_classes adalah list of numpy ints e.g. [0,8,12,13,14,18,38]\n",
+    "orig_classes = [int(x) for x in actual_classes]  # cast to python ints\n",
+    "# Buat mapping orig_label -> contiguous idx 0..(C-1)\n",
+    "label_remap = {orig: idx for idx, orig in enumerate(orig_classes)}\n",
+    "print(f\"[INFO] Label remap (orig -> new): {label_remap}\")\n",
     "\n",
-    "# DataLoader\n",
-    "train_loader = DataLoader(train_dataset, batch_size=4, shuffle=True)\n",
-    "val_loader   = DataLoader(val_dataset, batch_size=4, shuffle=False)\n",
-    "test_loader  = DataLoader(test_dataset, batch_size=4, shuffle=False)\n",
+    "# Update datasets: pass label_remap ke SeaweedDataset\n",
+    "train_dataset = SeaweedDataset([p[0] for p in train_pairs], label_map, tile_size=128, label_remap=label_remap)\n",
+    "val_dataset   = SeaweedDataset([p[0] for p in val_pairs], label_map, tile_size=128, label_remap=label_remap)\n",
+    "test_dataset  = SeaweedDataset([p[0] for p in test_pairs], label_map, tile_size=128, label_remap=label_remap, normalize=False)\n",
+    "\n",
+    "\n",
+    "# Hitung frekuensi kelas dari TRAIN dataset (hitung dari file y, lebih efisien)\n",
+    "'''\n",
+    "Menghitung distribusi jumlah pixel dari setiap kelas di TRAIN SET\n",
+    "Lalu menghitung bobot loss yang adil (class weights) berdasarkan distribusi ini\n",
+    "Supaya kelas langka tidak tertindas / diabaikan oleh model, \n",
+    "karena dataset Imbalance besar (background 0 paling dominan)\n",
+    "'''\n",
+    "from collections import Counter\n",
+    "counter = Counter()\n",
+    "for _, fy in train_pairs:\n",
+    "    y = np.load(fy, mmap_mode=\"r\")\n",
+    "    # remap using label_remap quickly:\n",
+    "    for orig, new in label_remap.items():\n",
+    "        cnt = int((y == orig).sum())\n",
+    "        counter[new] += cnt\n",
+    "\n",
+    "print(f\"[INFO] Pixel counts per (remapped) class (train set): {dict(counter)}\")\n",
+    "\n",
+    "# Buat class weights (inverse frequency), dan set weight[0]=0 karena ignore_index=0\n",
+    "counts = np.array([counter.get(i, 0) for i in range(len(label_remap))], dtype=np.float64)\n",
+    "eps = 1e-6\n",
+    "inv_freq = 1.0 / (counts + eps)\n",
+    "# optional normalization so that mean weight = 1\n",
+    "inv_freq = inv_freq / np.mean(inv_freq)\n",
+    "# set background index weight to 0 (ignored)\n",
+    "inv_freq[0] = 0.0\n",
+    "\n",
+    "print(f\"[INFO] Class weights (remapped, sum-normalized, bg=0): {inv_freq}\")\n",
+    "\n",
+    "# Simpan nilai-nilai penting ke variabel global untuk digunakan Cell6\n",
+    "num_classes_actual = len(label_remap)\n",
+    "label_remap_global = label_remap\n",
+    "class_weights_np = inv_freq.astype(np.float32)\n",
     "\n",
     "print(f\"\\nTotal TILE train: {len(train_dataset)}, val: {len(val_dataset)}, test: {len(test_dataset)}\")\n"
    ]
@@ -366,6 +425,168 @@
     "model = FCHybridSN(in_bands=in_bands_actual, num_classes=num_classes_actual).to(device)\n",
     "\n",
     "print(model)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb2e104e-e26f-4f8e-bbf5-b0a26de99191",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ===========================================\n",
+    "# Cell 6. Keperluan Evaluasi & Loss / Optimizer (diperbarui)\n",
+    "# ===========================================\n",
+    "import torch.optim as optim\n",
+    "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
+    "\n",
+    "# Menggunakan class weights yang sudah dihitung\n",
+    "# pastikan untuk memindahkan weight ke device nanti saat membangun criterion (lakukan setelah model.to(device))\n",
+    "weight_tensor = torch.from_numpy(class_weights_np)\n",
+    "\n",
+    "# enable cudnn benchmark untuk kecepatan (bagus ketika input sizes konstan)\n",
+    "torch.backends.cudnn.benchmark = True\n",
+    "\n",
+    "# hyperparameters (adjustable)\n",
+    "LR = 1e-4\n",
+    "WEIGHT_DECAY = 1e-5\n",
+    "BATCH_SIZE = 4   # Jika OOM, turunkan ke 2 atau 1. Coba 2 jika masih OOM.\n",
+    "\n",
+    "# DataLoaders menggunakan pin_memory dan num_workers untuk GPU\n",
+    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=4, pin_memory=True)\n",
+    "val_loader   = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=2, pin_memory=True)\n",
+    "test_loader  = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=2, pin_memory=True)\n",
+    "\n",
+    "# model to device sudah dilakukan lebih awal; pastikan criterion menggunakan weights on device\n",
+    "criterion = nn.CrossEntropyLoss(weight=None, ignore_index=0)  # placeholder weight = 0, akan di-set setelah move model to device\n",
+    "\n",
+    "# Optimizer & scheduler (setelah model available)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=LR, weight_decay=WEIGHT_DECAY)\n",
+    "scheduler = ReduceLROnPlateau(optimizer, mode='max', factor=0.5, patience=3, verbose=True)\n",
+    "\n",
+    "# Mixed precision scaler\n",
+    "scaler = torch.cuda.amp.GradScaler(enabled=(device.type == 'cuda'))\n",
+    "\n",
+    "def pixel_accuracy(pred, target):\n",
+    "    valid = (target >= 0)\n",
+    "    correct = (pred[valid] == target[valid]).sum()\n",
+    "    total = valid.sum()\n",
+    "    return (correct.float() / (total.float() + 1e-9)).item()\n",
+    "\n",
+    "def iou_per_class(pred, target, num_classes):\n",
+    "    ious = []\n",
+    "    for cls in range(num_classes):\n",
+    "        pred_i = (pred == cls)\n",
+    "        target_i = (target == cls)\n",
+    "        inter = (pred_i & target_i).sum()\n",
+    "        union = (pred_i | target_i).sum()\n",
+    "        if union == 0:\n",
+    "            ious.append(float('nan'))\n",
+    "        else:\n",
+    "            ious.append((inter.float() / union.float()).item())\n",
+    "    return ious\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ce62664-0656-468e-b294-464c42f7e048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ===========================================\n",
+    "# Cell 7. Loop Training Utama (+ checkpoint) — AMP & class weights\n",
+    "# ===========================================\n",
+    "import os, time\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "START_EPOCH = 1     # mulai default 1 (kamu sebelumnya sempat pakai 10)\n",
+    "NUM_EPOCHS = 50     # boleh disesuaikan; start conservative\n",
+    "best_val_acc = 0.0\n",
+    "\n",
+    "checkpoint_path = \"hybridsn_sgmt_ver2_checkpoint.pth\"\n",
+    "\n",
+    "# Pastikan criterion menggunakan weights pada device\n",
+    "weight_tensor_device = torch.from_numpy(class_weights_np).to(device)\n",
+    "criterion = nn.CrossEntropyLoss(weight=weight_tensor_device, ignore_index=0)\n",
+    "\n",
+    "# Load checkpoint jika ada (including scaler & scheduler)\n",
+    "if os.path.exists(checkpoint_path):\n",
+    "    checkpoint = torch.load(checkpoint_path, map_location=device)\n",
+    "    model.load_state_dict(checkpoint[\"model_state\"])\n",
+    "    optimizer.load_state_dict(checkpoint[\"optimizer_state\"])\n",
+    "    scaler.load_state_dict(checkpoint.get(\"scaler_state\", {}))\n",
+    "    START_EPOCH = checkpoint[\"epoch\"] + 1\n",
+    "    best_val_acc = checkpoint.get(\"best_val_acc\", 0.0)\n",
+    "    print(f\"[INFO] Memuat checkpoint {checkpoint_path}, resume epoch {START_EPOCH}\")\n",
+    "else:\n",
+    "    print(\"[INFO] Tidak ditemukan checkpoint. Mulai training dari awal.\")\n",
+    "\n",
+    "for epoch in range(START_EPOCH, NUM_EPOCHS + 1):\n",
+    "    start_time = time.time()\n",
+    "    model.train()\n",
+    "    running_loss = 0.0\n",
+    "    pbar = tqdm(train_loader, desc=f\"Epoch {epoch}/{NUM_EPOCHS}\", leave=True)\n",
+    "    for xb, yb in pbar:\n",
+    "        xb = xb.to(device, non_blocking=True)\n",
+    "        yb = yb.to(device, non_blocking=True)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        with torch.cuda.amp.autocast(enabled=(device.type == 'cuda')):\n",
+    "            logits = model(xb)               # [B, C, H, W]\n",
+    "            loss = criterion(logits, yb)\n",
+    "\n",
+    "        # scaler backward + step\n",
+    "        if device.type == 'cuda':\n",
+    "            scaler.scale(loss).backward()\n",
+    "            scaler.step(optimizer)\n",
+    "            scaler.update()\n",
+    "        else:\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "        running_loss += loss.item()\n",
+    "        pbar.set_postfix({\"TrainLoss\": f\"{loss.item():.4f}\"})\n",
+    "\n",
+    "    avg_loss = running_loss / max(1, len(train_loader))\n",
+    "\n",
+    "    # Validation\n",
+    "    model.eval()\n",
+    "    val_accs = []\n",
+    "    val_ious = []\n",
+    "    with torch.no_grad():\n",
+    "        for xb, yb in val_loader:\n",
+    "            xb = xb.to(device, non_blocking=True)\n",
+    "            yb = yb.to(device, non_blocking=True)\n",
+    "            with torch.cuda.amp.autocast(enabled=(device.type == 'cuda')):\n",
+    "                logits = model(xb)\n",
+    "            preds = logits.argmax(dim=1)\n",
+    "            val_accs.append(pixel_accuracy(preds, yb))\n",
+    "            val_ious.extend(iou_per_class(preds, yb, num_classes_actual))\n",
+    "\n",
+    "    mean_val_acc = np.nanmean(val_accs)\n",
+    "    mean_iou = np.nanmean([v for v in val_ious if not np.isnan(v)])\n",
+    "    elapsed = time.time() - start_time\n",
+    "\n",
+    "    print(f\"Epoch {epoch}/{NUM_EPOCHS} | Loss={avg_loss:.4f} | ValAcc={mean_val_acc:.4f} | mIoU={mean_iou:.4f} | Time={elapsed/3600:.2f} jam\")\n",
+    "\n",
+    "    # Scheduler step (ReduceLROnPlateau uses validation metric)\n",
+    "    scheduler.step(mean_val_acc)\n",
+    "\n",
+    "    # Checkpoint (simpan juga scaler state)\n",
+    "    checkpoint = {\n",
+    "        \"epoch\": epoch,\n",
+    "        \"model_state\": model.state_dict(),\n",
+    "        \"optimizer_state\": optimizer.state_dict(),\n",
+    "        \"best_val_acc\": best_val_acc,\n",
+    "        \"scaler_state\": scaler.state_dict() if device.type == 'cuda' else {}\n",
+    "    }\n",
+    "    torch.save(checkpoint, checkpoint_path)\n",
+    "\n",
+    "    if mean_val_acc > best_val_acc:\n",
+    "        best_val_acc = mean_val_acc\n",
+    "        torch.save(checkpoint, \"hybridsn_sgmt_ver2_best.pth\")\n",
+    "        print(\"[INFO] Model terbaik disimpan.\")\n"
    ]
   }
  ],
