Just did the Phase1 and Phase2 experiments to find the best hyperparameter config

--- a/notebooks/train_hybridsn_sgmt_ver3_optimized.ipynb
+++ b/notebooks/train_hybridsn_sgmt_ver3_optimized.ipynb
@@ -10,20 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "aa43fa3c-6f3e-4cdb-ba31-8da1fa6e3c09",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Device yang digunakan: cuda\n",
-      "GPU: NVIDIA GeForce RTX 4080 SUPER\n",
-      "Total Memory: 17.17 GB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===========================================\n",
     "# Cell 1. Import Library dan Setup Environment\n",
@@ -59,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "937b429a-e36b-4645-9292-0f5df6c04fdc",
    "metadata": {},
    "outputs": [],
@@ -116,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ae7aceb2-d31e-42b5-ad5f-9d5f1ac74534",
    "metadata": {},
    "outputs": [],
@@ -239,46 +229,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "56205d90-81a4-4c31-9ccc-c0db25614cdb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jumlah total kelas di JSON: 41\n",
-      "Total pasangan file X-Y ditemukan: 18\n",
-      "\n",
-      "=== FINAL SPLIT PER FILE ===\n",
-      "Train : 11\n",
-      "Val   : 5\n",
-      "Test  : 2\n",
-      "[INFO] Kelas AKTUAL yang ditemukan di dataset: [np.int32(0), np.int32(8), np.int32(12), np.int32(13), np.int32(14), np.int32(18), np.int32(38)]\n",
-      "[INFO] Label remap (orig -> new): {0: 0, 8: 1, 12: 2, 13: 3, 14: 4, 18: 5, 38: 6}\n",
-      "[INFO] Pre-filtering empty tiles...\n",
-      "[INFO] Total tile valid: 5395\n",
-      "[INFO] Total tile empty (filtered): 12805\n",
-      "[INFO] Ratio valid/total: 29.64%\n",
-      "[INFO] Total tile terdaftar: 5395 dari 11 file\n",
-      "[INFO] Pre-filtering empty tiles...\n",
-      "[INFO] Total tile valid: 5698\n",
-      "[INFO] Total tile empty (filtered): 2898\n",
-      "[INFO] Ratio valid/total: 66.29%\n",
-      "[INFO] Total tile terdaftar: 5698 dari 5 file\n",
-      "[INFO] Pre-filtering empty tiles...\n",
-      "[INFO] Total tile valid: 1710\n",
-      "[INFO] Total tile empty (filtered): 950\n",
-      "[INFO] Ratio valid/total: 64.29%\n",
-      "[INFO] Total tile terdaftar: 1710 dari 2 file\n",
-      "[INFO] Pixel counts per class: {0: 14185638, 1: 840140, 2: 1566138, 3: 808104, 4: 36978, 5: 139337, 6: 1297565}\n",
-      "[INFO] Class weights: [0.         0.2185292  0.11722793 0.22719245 4.9649825  1.3176336\n",
-      " 0.14149204]\n",
-      "\n",
-      "Total TILE train: 5395, val: 5698, test: 1710\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===========================================\n",
     "# Cell 4. Load Dataset dan Splitting\n",
@@ -344,37 +298,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "aece8dd7-b31b-4785-89aa-8ea6a972b127",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Band input aktual: 300\n",
-      "Total parameters: 1,629,767\n",
-      "OptimizedFCHybridSN(\n",
-      "  (conv3d_1): Conv3d(1, 16, kernel_size=(7, 3, 3), stride=(1, 1, 1), padding=(0, 1, 1))\n",
-      "  (bn3d_1): BatchNorm3d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (conv3d_2): Conv3d(16, 32, kernel_size=(5, 3, 3), stride=(1, 1, 1), padding=(0, 1, 1))\n",
-      "  (bn3d_2): BatchNorm3d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (conv3d_3): Conv3d(32, 64, kernel_size=(3, 3, 3), stride=(1, 1, 1), padding=(0, 1, 1))\n",
-      "  (bn3d_3): BatchNorm3d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (spectral_pool): AdaptiveAvgPool3d(output_size=(8, None, None))\n",
-      "  (conv2d_1): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "  (bn2d_1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (dropout1): Dropout2d(p=0.3, inplace=False)\n",
-      "  (conv2d_2): Conv2d(256, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "  (bn2d_2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (dropout2): Dropout2d(p=0.3, inplace=False)\n",
-      "  (conv2d_3): Conv2d(128, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "  (bn2d_3): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (classifier): Conv2d(64, 7, kernel_size=(1, 1), stride=(1, 1))\n",
-      ")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===========================================\n",
     "# Cell 5. Model OPTIMIZED HybridSN\n",
@@ -460,30 +387,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9b475646-f001-4075-b0cd-89e9d142e3f8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] Original class weights: [0.         0.2185292  0.11722793 0.22719245 4.9649825  1.3176336\n",
-      " 0.14149204]\n",
-      "[INFO] Smoothed class weights: [0.         0.46747106 0.34238565 0.47664708 2.228224   1.1478822\n",
-      " 0.37615427]\n",
-      "Setup selesai!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\admin\\miniconda3\\envs\\algae\\lib\\site-packages\\torch\\optim\\lr_scheduler.py:62: UserWarning: The verbose parameter is deprecated. Please use get_last_lr() to access the learning rate.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===========================================\n",
     "# Cell 6. Loss, Optimizer, dan Metrics (STABLE + SQRT SMOOTHING)\n",
@@ -496,10 +403,10 @@
     "torch.backends.cudnn.benchmark = True\n",
     "\n",
     "# Hyperparameters\n",
-    "LR = 5e-5 # turun dari 1e-4\n",
+    "LR = 5e-6 # LR hasil uji coba phase 1\n",
     "WEIGHT_DECAY = 1e-5\n",
-    "BATCH_SIZE = 1\n",
-    "ACCUMULATION_STEPS = 8  # Efektif batch size = 8\n",
+    "BATCH_SIZE = 4\n",
+    "ACCUMULATION_STEPS = 2\n",
     "CLIP_NORM = 0.5 # Turun dari 1.0\n",
     "\n",
     "# DataLoaders\n",
@@ -525,7 +432,7 @@
     "\n",
     "# Optimizer & scheduler\n",
     "optimizer = optim.AdamW(model.parameters(), lr=LR, weight_decay=WEIGHT_DECAY, eps=1e-8)\n",
-    "scheduler = ReduceLROnPlateau(optimizer, mode='max', factor=0.5, patience=5, verbose=True, min_lr=1e-7)\n",
+    "scheduler = ReduceLROnPlateau(optimizer, mode='max', factor=0.5, patience=3, verbose=True, min_lr=1e-7) # patience diturunkan dari 5 ke 3, agar responsif\n",
     "\n",
     "\n",
     "# PERBAIKAN: Metrik evaluasi yang benar\n",
@@ -591,86 +498,22 @@
     "with torch.no_grad():\n",
     "    dummy_x = torch.randn(1, in_bands_actual, TILE_SIZE, TILE_SIZE).to(device)\n",
     "    dummy_y = model(dummy_x)\n",
-    "    print(f\"Test passed! Output shape: {dummy_y.shape}\")\n",
-    "    print(f\"Memory used: {torch.cuda.memory_allocated()/1e9:.2f} GB\")\n",
+    "    mem_used = torch.cuda.memory_allocated() / 1e9\n",
+    "    print(f\"[OK] Test passed! Memory used: {mem_used:.2f} GB\")\n",
+    "    if mem_used < 10.0:  # Aman jika < 10 GB\n",
+    "        print(\"✓ Aman untuk training dengan tile 48x48\")\n",
+    "    else:\n",
+    "        print(\"⚠ Mungkin OOM, pertimbangkan tile 32 + LR kecil\")\n",
     "    del dummy_x, dummy_y\n",
     "    torch.cuda.empty_cache()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "db874dfe-32b4-46d0-ae5e-d0d2310f4f76",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] Training dari awal\n",
-      "\n",
-      "============================================================\n",
-      "Epoch 1/2\n",
-      "============================================================\n",
-      "GPU Memory: 0.01 GB allocated\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                     "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Results:\n",
-      "  Train Loss: 1.8991 | Train Acc: 0.3833\n",
-      "  Val Loss  : 1.8985 | Val Acc  : 0.4634\n",
-      "  Val mIoU  : 0.1077\n",
-      "  Time      : 4.15 min\n",
-      "  IoU per class: [0.         0.03565709 0.         0.         0.         0.50302017]\n",
-      "[OK] Best model saved! (mIoU: 0.1077)\n",
-      "\n",
-      "============================================================\n",
-      "Epoch 2/2\n",
-      "============================================================\n",
-      "GPU Memory: 0.03 GB allocated\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                     "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Results:\n",
-      "  Train Loss: 1.6945 | Train Acc: 0.5737\n",
-      "  Val Loss  : 1.8632 | Val Acc  : 0.0623\n",
-      "  Val mIoU  : 0.0263\n",
-      "  Time      : 3.43 min\n",
-      "  IoU per class: [0.         0.03460516 0.00362831 0.         0.         0.04056756]\n",
-      "\n",
-      "============================================================\n",
-      "Training selesai!\n",
-      "Best validation mIoU: 0.1077\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===========================================\n",
     "# Cell 7. Training Loop (OPTIMIZED)\n",
@@ -680,7 +523,7 @@
     "import time\n",
     "\n",
     "START_EPOCH = 1\n",
-    "NUM_EPOCHS = 2\n",
+    "NUM_EPOCHS = 5\n",
     "best_val_miou = 0.0\n",
     "\n",
     "checkpoint_path = \"hybridsn_sgmt_ver3_checkpoint.pth\"\n",
