Just committing the uncommitted in ver3, actually there's no significant changes

--- a/notebooks/train_hybridsn_sgmt_ver3_optimized.ipynb
+++ b/notebooks/train_hybridsn_sgmt_ver3_optimized.ipynb
@@ -266,8 +266,8 @@
     "label_remap = {orig: idx for idx, orig in enumerate(orig_classes)}\n",
     "print(f\"[INFO] Label remap (orig -> new): {label_remap}\")\n",
     "\n",
-    "# PENTING: Ubah tile_size ke 64 untuk menghemat memory\n",
-    "TILE_SIZE = 32  # Turun dari 64\n",
+    "# PENTING: Ubah tile_size untuk menghemat memory\n",
+    "TILE_SIZE = 256  # Test 256\n",
     "\n",
     "train_dataset = SeaweedDataset([p[0] for p in train_pairs], label_map, tile_size=TILE_SIZE, label_remap=label_remap)\n",
     "val_dataset   = SeaweedDataset([p[0] for p in val_pairs], label_map, tile_size=TILE_SIZE, label_remap=label_remap)\n",
@@ -405,8 +405,8 @@
     "# Hyperparameters\n",
     "LR = 5e-6 # LR hasil uji coba phase 1\n",
     "WEIGHT_DECAY = 1e-5\n",
-    "BATCH_SIZE = 4\n",
-    "ACCUMULATION_STEPS = 2\n",
+    "BATCH_SIZE = 1 #\n",
+    "ACCUMULATION_STEPS = 4 #\n",
     "CLIP_NORM = 0.5 # Turun dari 1.0\n",
     "\n",
     "# DataLoaders\n",
